examples/test/testpolicy13766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13766
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key38: value22
      key7: value8
      key5: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value45
          key5: value21
      podSelector:
        matchLabels:
          key34: value10
          key39: value39
